--- a/ui/package.json
+++ b/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,11 +11,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
-    "@types/styled-components": "^5.1.2",
+    "@types/styled-components": "^5.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
     "react-scripts": "3.4.3",
+    "react-styled-flexboxgrid": "^3.2.1",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
